better name change request -> richiesta
